--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 services:
   bot:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .:/app
     environment:
+      DB_HOST: db
       - DATABASE_URL=mysql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+    depends_on:
+      - db
 
   db:
     image: mysql:latest
